--- a/auth/package.json
+++ b/auth/package.json
@@ -19,6 +19,7 @@
   "license": "ISC",
   "dependencies": {
     "@amtickets377/common": "^1.0.1",
+    "@cloud-wave/common": "^1.0.1",
     "@types/cookie-session": "^2.0.48",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
