--- a/infra/K8s/ingress-srv.yaml
+++ b/infra/K8s/ingress-srv.yaml
@@ -7,7 +7,7 @@ metadata:
     nginx.ingress.kubernetes.io/use-regex: 'true'
 spec:
   rules:
-    - host: ticketing.dev
+    - host: cloud.dev
       http:
         paths:
           - path: /api/users/?(.*)
@@ -17,10 +17,10 @@ spec:
                 name: auth-srv
                 port:
                   number: 4000
-          - path: /?(.*)
-            pathType: Prefix
-            backend:
-              service:
-                name: client-srv
-                port:
-                  number: 3000
+#          - path: /?(.*)
+#            pathType: Prefix
+#            backend:
+#              service:
+#                name: client-srv
+#                port:
+#                  number: 3000
