--- a/common/package.json
+++ b/common/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@cloud-wave/common",
-  "version": "1.0.9",
+  "version": "1.0.14",
   "description": "",
   "main": "./build/index.js",
   "types": "./build/index.d.ts",
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@amtickets377/common": "^1.0.14",
+    "@kubernetes/client-node": "^0.21.0",
     "@types/cookie-session": "^2.0.48",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
