--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -23,6 +23,22 @@ build:
             dest: .
       docker:
         dockerfile: Dockerfile
+    - image: amrmahmoud377/database-engine-paas
+      context: database-engine
+      sync:
+        manual:
+          - src: src/**/*.js
+            dest: .
+      docker:
+        dockerfile: Dockerfile
+    - image: amrmahmoud377/database-order-paas
+      context: databsae-order
+      sync:
+        manual:
+          - src: src/**/*.js
+            dest: .
+      docker:
+        dockerfile: Dockerfile
 #    - image: amrmahmoud377/client-paas
 #      context: client
 #      docker:
