--- a/email/package.json
+++ b/email/package.json
@@ -19,6 +19,7 @@
   "license": "ISC",
   "dependencies": {
     "@cloud-wave/common": "^1.0.2",
+    "@kubernetes/client-node": "^0.21.0",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node-fetch": "^2.6.11",
