--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -39,6 +39,14 @@ build:
             dest: .
       docker:
         dockerfile: Dockerfile
+    - image: amrmahmoud377/database-management-paas
+      context: database-management
+      sync:
+        manual:
+          - src: src/**/*.js
+            dest: .
+      docker:
+        dockerfile: Dockerfile
 #    - image: amrmahmoud377/client-paas
 #      context: client
 #      docker:
