--- a/database-engine/package.json
+++ b/database-engine/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "database-engine-v2",
+  "name": "database-engine",
   "version": "1.0.4",
   "description": "",
   "main": "index.js",
@@ -18,8 +18,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@amtickets377/common": "^1.0.23",
-    "@cloud-wave/common": "^1.0.23",
+    "@cloud-wave/common": "^1.0.27",
     "@kubernetes/client-node": "^0.21.0",
     "@types/cookie-session": "^2.0.48",
     "@types/express": "^4.17.21",
