--- a/infra/K8s/ingress-srv.yaml
+++ b/infra/K8s/ingress-srv.yaml
@@ -24,6 +24,13 @@ spec:
                 name: database-order-srv
                 port:
                   number: 4000
+          - path: /api/database/management/?(.*)
+            pathType: Prefix
+            backend:
+              service:
+                name: database-management-srv
+                port:
+                  number: 4000
 #          - path: /?(.*)
 #            pathType: Prefix
 #            backend:
