--- a/auth/package.json
+++ b/auth/package.json
@@ -19,19 +19,20 @@
   "license": "ISC",
   "dependencies": {
     "@amtickets377/common": "^1.0.1",
-    "@cloud-wave/common": "^1.0.2",
+    "@cloud-wave/common": "^1.0.34",
     "@types/cookie-session": "^2.0.48",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node-fetch": "^2.6.11",
     "cookie-session": "^2.1.0",
-    "express": "^4.18.2",
+    "express": "^4.19.2",
     "express-async-errors": "^3.1.1",
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.1",
     "node-fetch": "^3.3.2",
     "node-nats-streaming": "^0.3.2",
+    "stripe": "^16.0.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.3.3"
   },
