--- a/payment/package.json
+++ b/payment/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "auth",
+  "name": "payment",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -18,26 +18,29 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@amtickets377/common": "^1.0.1",
-    "@cloud-wave/common": "^1.0.34",
-    "@types/cookie-session": "^2.0.48",
+    "@cloud-wave/common": "^1.0.37",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node-fetch": "^2.6.11",
+    "@types/stripe": "^8.0.417",
     "cookie-session": "^2.1.0",
-    "express": "^4.19.2",
+    "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.3",
     "node-fetch": "^3.3.2",
     "node-nats-streaming": "^0.3.2",
+    "nodemailer": "^6.9.13",
     "stripe": "^16.0.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.3.3"
   },
   "devDependencies": {
+    "@types/html-to-text": "^9.0.4",
     "@types/jest": "^29.5.12",
+    "@types/nodemailer": "^6.4.15",
+    "@types/pug": "^2.0.10",
     "@types/supertest": "^6.0.2",
     "jest": "^29.7.0",
     "mongodb-memory-server": "^9.1.7",
