--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -47,6 +47,14 @@ build:
             dest: .
       docker:
         dockerfile: Dockerfile
+    - image: amrmahmoud377/payment-paas
+      context: payment
+      sync:
+        manual:
+          - src: src/**/*.js
+            dest: .
+      docker:
+        dockerfile: Dockerfile
 #    - image: amrmahmoud377/client-paas
 #      context: client
 #      docker:
