--- a/common/package.json
+++ b/common/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@cloud-wave/common",
-  "version": "1.0.37",
+  "version": "1.0.39",
   "description": "",
   "main": "./build/index.js",
   "types": "./build/index.d.ts",
@@ -25,8 +25,10 @@
     "@types/cookie-session": "^2.0.48",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
+    "axios": "^1.7.2",
     "cookie-session": "^2.1.0",
-    "express": "^4.18.3",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
     "node-nats-streaming": "^0.3.2"
