add application engine service and deployment file for other service

--- a/app-engine/Dockerfile
+++ b/app-engine/Dockerfile
@@ -1,10 +1,19 @@
-FROM node:alpine
+# Use Docker-in-Docker (DinD) base image
+FROM docker:20.10.7-dind
 
+# Install Node.js
+RUN apk add --no-cache nodejs npm
+
+# Set the working directory inside the container
 WORKDIR /app
 
-COPY package.json .
+# Copy package.json and install dependencies
+COPY package.json package-lock.json ./
 
-RUN npm install --omit=dev
+RUN npm install --omit=dev && npm install --save-dev @types/dockerode
+
+# Copy the rest of the application code
 COPY . .
 
-CMD ["npm" ,"start"]
+# Command to start your application
+CMD ["npm", "start"]
