--- a/app-management/package.json
+++ b/app-management/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "database-engine",
+  "name": "database-management",
   "version": "1.0.4",
   "description": "",
   "main": "index.js",
@@ -18,31 +18,24 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@cloud-wave/common": "^1.0.45",
+    "@cloud-wave/common": "^1.0.33",
     "@kubernetes/client-node": "^0.21.0",
     "@types/cookie-session": "^2.0.48",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
-    "child_process": "^1.0.2",
     "cookie-session": "^2.1.0",
-    "docker-cli-js": "^2.10.0",
-    "dockerode": "^4.0.2",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "express-validator": "^7.0.1",
-    "fs-extra": "^11.2.0",
     "jsonwebtoken": "^9.0.2",
     "kubernetes-client": "^9.0.0",
     "mongoose": "^8.4.3",
     "mongoose-update-if-current": "^1.4.0",
     "node-nats-streaming": "^0.3.2",
-    "simple-git": "^3.25.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.3.3"
   },
   "devDependencies": {
-    "@types/dockerode": "^3.3.29",
-    "@types/fs-extra": "^11.0.4",
     "@types/jest": "^29.5.12",
     "@types/supertest": "^6.0.2",
     "jest": "^29.7.0",
