--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -63,6 +63,14 @@ build:
             dest: .
       docker:
         dockerfile: Dockerfile
+    - image: amrmahmoud377/app-engine
+      context: app-engine
+      sync:
+        manual:
+          - src: src/**/*.js
+            dest: .
+      docker:
+        dockerfile: Dockerfile
 #    - image: amrmahmoud377/client-paas
 #      context: client
 #      docker:
