--- a/app-management/package.json
+++ b/app-management/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "database-management",
+  "name": "app-management",
   "version": "1.0.4",
   "description": "",
   "main": "index.js",
@@ -18,7 +18,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@cloud-wave/common": "^1.0.49",
+    "@cloud-wave/common": "^1.0.52",
     "@kubernetes/client-node": "^0.21.0",
     "@types/cookie-session": "^2.0.48",
     "@types/express": "^4.17.21",
