--- a/auth/package.json
+++ b/auth/package.json
@@ -25,6 +25,7 @@
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node-fetch": "^2.6.11",
     "cookie-session": "^2.1.0",
+    "cors": "^2.8.5",
     "express": "^4.19.2",
     "express-async-errors": "^3.1.1",
     "express-validator": "^7.0.1",
