--- a/auth/package.json
+++ b/auth/package.json
@@ -21,7 +21,6 @@
     "@amtickets377/common": "^1.0.1",
     "@cloud-wave/common": "^1.0.34",
     "@types/cookie-session": "^2.0.48",
-    "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node-fetch": "^2.6.11",
     "cookie-session": "^2.1.0",
@@ -35,9 +34,11 @@
     "node-nats-streaming": "^0.3.2",
     "stripe": "^16.0.0",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.3.3"
+    "typescript": "^5.5.2"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
     "@types/supertest": "^6.0.2",
     "jest": "^29.7.0",
