--- a/auth/tsconfig.json
+++ b/auth/tsconfig.json
@@ -106,7 +106,7 @@
     // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
     "skipLibCheck": true  ,
     "moduleResolution": "node",
-
+    "typeRoots": ["node_modules/@types"]
     // other options...
     /* Skip type checking all .d.ts files. */
   }
