--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,12 +1,23 @@
-FROM node:14-alpine
-COPY package.json .
-COPY package-lock.json .
-# Copy the local code to the container
-RUN npm install
-COPY . .
-RUN npm run build
-RUN npm install -g serve
-CMD ["serve", "-s", "build", "-l", "3000"]
+# Use the official Node.js image as the base image
+FROM node:18-alpine
 
-# Expose port 3000 to the outside world
-EXPOSE 3000
+# Set the working directory in the container
+WORKDIR /app
+
+# Copy the package.json and package-lock.json files to the working directory
+COPY package*.json ./
+
+# Install dependencies
+RUN npm install
+
+# Copy the rest of the application code to the working directory
+COPY . .
+
+# Expose the port that Vite runs on
+EXPOSE 5173
+
+# Set environment variable to use the same port
+ENV PORT=5173
+
+# Command to run the Vite development server
+CMD ["npm", "run", "start"]
