--- a/app-engine/package.json
+++ b/app-engine/package.json
@@ -18,7 +18,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@cloud-wave/common": "^1.0.52",
+    "@cloud-wave/common": "^1.0.56",
     "@kubernetes/client-node": "^0.21.0",
     "@types/cookie-session": "^2.0.48",
     "@types/express": "^4.17.21",
@@ -38,13 +38,15 @@
     "node-nats-streaming": "^0.3.2",
     "simple-git": "^3.25.0",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "xml2js": "^0.6.2"
   },
   "devDependencies": {
     "@types/dockerode": "^3.3.29",
     "@types/fs-extra": "^11.0.4",
     "@types/jest": "^29.5.12",
     "@types/supertest": "^6.0.2",
+    "@types/xml2js": "^0.4.14",
     "jest": "^29.7.0",
     "mongodb-memory-server": "^9.1.7",
     "supertest": "^6.3.4",
