--- a/client/package.json
+++ b/client/package.json
@@ -21,8 +21,11 @@
     "mdb-react-ui-kit": "^8.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-github-login-button": "^1.0.1",
+    "react-helmet": "^6.1.0",
     "react-icons": "^5.2.1",
-    "react-router-dom": "^6.24.0"
+    "react-router-dom": "^6.24.0",
+    "react-spinners": "^0.14.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
