--- a/infra/K8s/app-engine-depl.yaml
+++ b/infra/K8s/app-engine-depl.yaml
@@ -19,7 +19,7 @@ spec:
             - name: NATS_URL
               value: 'http://nats-srv:4222'
             - name: JENKINS_URL
-              value: 'http://localhost:8080'
+              value: 'http://jenkins-srv:8080/'
             - name: NATS_CLUSTER_ID
               value: ticketing
             - name: NATS_CLIENT_ID
@@ -32,10 +32,7 @@ spec:
                   name: jwt-secret
                   key: JWT_KEY
             - name: JENKINS_API_TOKEN
-              valueFrom:
-                secretKeyRef:
-                  name: jenkins-api-token
-                  key: JENKINS_API_TOKEN
+              value: '115c180b56316968efd140a6551b64d3e4'
             - name: JENKINS_USER
               valueFrom:
                 secretKeyRef:
@@ -47,16 +44,23 @@ spec:
             privileged: true
           volumeMounts:
             - name: docker-socket
-              mountPath: /var/run/docker.sock  # Mount Docker socket
-
-#        - name: docker
-#          image: docker:20.10.7-dind  # Using a Docker-in-Docker image
-#          securityContext:
-#            privileged: true  # Necessary for Docker-in-Docker
+              mountPath: /var/run/docker.sock
       volumes:
         - name: docker-socket
           hostPath:
             path: /var/run/docker.sock
             type: Socket
-#      imagePullSecrets:
-#        - name: regcred  # Assuming this is your image pull secret
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: app-engine-srv
+spec:
+  type: ClusterIP
+  selector:
+    app: app-engine
+  ports:
+    - name: app-engine-srv
+      protocol: TCP
+      port: 4000
+      targetPort: 4000
