--- a/infra/K8s/ipaddresspool.yaml
+++ b/infra/K8s/ipaddresspool.yaml
@@ -1,8 +1,12 @@
-apiVersion: metallb.io/v1beta1
-kind: IPAddressPool
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRoleBinding
 metadata:
-  name: first-pool
-  namespace: metallb-system
-spec:
-  addresses:
-    - 192.168.65.0/24
+  name: ngrok-ingress-controller-role-binding
+subjects:
+  - kind: ServiceAccount
+    name: default  # Replace with the actual service account name used by Ngrok
+    namespace: ngrok-ingress-controller  # Replace with the namespace where Ngrok Ingress Controller is deployed
+roleRef:
+  kind: ClusterRole
+  name: nginx-ingress-role  # Replace with the name of a ClusterRole that grants necessary permissions to list ingresses
+  apiGroup: rbac.authorization.k8s.io
