--- a/infra/K8s/app-engine-depl.yaml
+++ b/infra/K8s/app-engine-depl.yaml
@@ -18,6 +18,8 @@ spec:
           env:
             - name: NATS_URL
               value: 'http://nats-srv:4222'
+            - name: HOST_URL
+              value: 'https://c765-41-46-119-148.ngrok-free.app'
             - name: JENKINS_URL
               value: 'http://jenkins-srv:8080/'
             - name: NATS_CLUSTER_ID
