--- a/client/package.json
+++ b/client/package.json
@@ -25,7 +25,9 @@
     "react-helmet": "^6.1.0",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.24.0",
-    "react-spinners": "^0.14.1"
+    "react-spinners": "^0.14.1",
+    "xterm": "^5.3.0",
+    "xterm-addon-fit": "^0.8.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
